--- a/Views/Walkers/Index.cshtml
+++ b/Views/Walkers/Index.cshtml
@@ -40,12 +40,13 @@
                 @Html.DisplayFor(modelItem => item.NeighborhoodId)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ImageUrl)
+                @*@Html.DisplayFor(modelItem => item.ImageUrl)*@
+                <img src="@item.ImageUrl" alt="avatar" />
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Edit", "Edit", new { id=item.Id }),
+                @Html.ActionLink("Details", "Details", new { id=item.Id }),
+                @Html.ActionLink("Delete", "Delete", new { id=item.Id })
             </td>
         </tr>
 }
