--- a/Views/Walkers/Details.cshtml
+++ b/Views/Walkers/Details.cshtml
@@ -29,7 +29,8 @@
             @Html.DisplayFor(model => model.NeighborhoodId)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImageUrl)
+            @*@Html.DisplayNameFor(model => model.ImageUrl)*@
+            Avatar
         </dt>
         <dd class="col-sm-10">
             @*@Html.DisplayFor(model => model.ImageUrl)*@
