--- a/Views/Owners/Index.cshtml
+++ b/Views/Owners/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<DogGo.Models.Walker>
+﻿@model IEnumerable<DogGo.Models.Owner>
 
 @{
-    ViewData["Title"] = "Walkers";
+    ViewData["Title"] = "Owners";
 }
 
-<h1>List of Walkers</h1>
+<h1>List of Owners</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -16,14 +16,19 @@
                 @Html.DisplayNameFor(model => model.Id)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Email)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Address)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.NeighborhoodId)
             </th>
             <th>
-                @*@Html.DisplayNameFor(model => model.ImageUrl)*@
-                Avatar
+                @Html.DisplayNameFor(model => model.Phone)
             </th>
             <th></th>
         </tr>
@@ -35,14 +40,19 @@
                 @Html.DisplayFor(modelItem => item.Id)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Address)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.NeighborhoodId)
             </td>
             <td>
-                @*@Html.DisplayFor(modelItem => item.ImageUrl)*@
-                <img src="@item.ImageUrl" alt="avatar" />
+                @Html.DisplayFor(modelItem => item.Phone)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
