--- a/Views/Walkers/Index.cshtml
+++ b/Views/Walkers/Index.cshtml
@@ -19,7 +19,8 @@
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.NeighborhoodId)
+                @*@Html.DisplayNameFor(model => model.Neighborhood.Name)*@
+                Neighborhood
             </th>
             <th>
                 @*@Html.DisplayNameFor(model => model.ImageUrl)*@
@@ -38,7 +39,7 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.NeighborhoodId)
+                @Html.DisplayFor(modelItem => item.Neighborhood.Name)
             </td>
             <td>
                 @*@Html.DisplayFor(modelItem => item.ImageUrl)*@
