refactored OwnerRepo, Index() and Details() methods for owner pages to display the Neighborhood name instead of just the Neighborhood Id for the owners and the walkers

--- a/Views/Owners/Index.cshtml
+++ b/Views/Owners/Index.cshtml
@@ -25,7 +25,8 @@
                 @Html.DisplayNameFor(model => model.Address)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.NeighborhoodId)
+                @*@Html.DisplayNameFor(model => model.NeighborhoodId)*@
+                Neighborhood
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Phone)
@@ -49,7 +50,7 @@
                 @Html.DisplayFor(modelItem => item.Address)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.NeighborhoodId)
+                @Html.DisplayFor(modelItem => item.Neighborhood.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Phone)
