--- a/Views/Owners/Delete.cshtml
+++ b/Views/Owners/Delete.cshtml
@@ -37,10 +37,12 @@
             @Html.DisplayFor(model => model.Address)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.NeighborhoodId)
+            @*@Html.DisplayNameFor(model => model.NeighborhoodId)*@
+            Neighborhood
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.NeighborhoodId)
+            @*@Html.DisplayFor(model => model.NeighborhoodId)*@
+            @Html.DisplayFor(model => model.Neighborhood.Name)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Phone)
