--- a/Views/Dogs/Index.cshtml
+++ b/Views/Dogs/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<DogGo.Models.Dog>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Dogs";
 }
 
-<h1>Index</h1>
+<h1>List of Dogs</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -28,7 +28,8 @@
                 @Html.DisplayNameFor(model => model.ImageUrl)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.OwnerId)
+                @*@Html.DisplayNameFor(model => model.OwnerId)*@
+                Owner Name
             </th>
             <th></th>
         </tr>
@@ -52,12 +53,13 @@
                 @Html.DisplayFor(modelItem => item.ImageUrl)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.OwnerId)
+                @*@Html.DisplayFor(modelItem => item.OwnerId)*@
+                @Html.DisplayFor(modelItem => item.Owner.Name)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+                @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+                @Html.ActionLink("Delete", "Delete", new { id=item.Id })
             </td>
         </tr>
 }
