--- a/Views/Dogs/Index.cshtml
+++ b/Views/Dogs/Index.cshtml
@@ -22,14 +22,15 @@
                 @Html.DisplayNameFor(model => model.Breed)
             </th>
             <th>
+                @*@Html.DisplayNameFor(model => model.OwnerId)*@
+                Owner Name
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Notes)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ImageUrl)
-            </th>
-            <th>
-                @*@Html.DisplayNameFor(model => model.OwnerId)*@
-                Owner Name
+                @*@Html.DisplayNameFor(model => model.ImageUrl)*@
+                Dog Selfie
             </th>
             <th></th>
         </tr>
@@ -47,19 +48,20 @@
                 @Html.DisplayFor(modelItem => item.Breed)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Notes)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ImageUrl)
-            </td>
-            <td>
                 @*@Html.DisplayFor(modelItem => item.OwnerId)*@
                 @Html.DisplayFor(modelItem => item.Owner.Name)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+                @Html.DisplayFor(modelItem => item.Notes)
+            </td>
+            <td>
+                @*@Html.DisplayFor(modelItem => item.ImageUrl)*@
+                <img src="@item.ImageUrl" alt="Dog Selfie" />
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
             </td>
         </tr>
 }
