--- a/Views/Dogs/Delete.cshtml
+++ b/Views/Dogs/Delete.cshtml
@@ -37,16 +37,20 @@
             @Html.DisplayFor(model => model.Notes)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ImageUrl)
+            @*@Html.DisplayNameFor(model => model.OwnerId)*@
+            Owner Name
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ImageUrl)
+            @*@Html.DisplayFor(model => model.OwnerId)*@
+            @Html.DisplayFor(model => model.Owner.Name)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.OwnerId)
+            @*@Html.DisplayNameFor(model => model.ImageUrl)*@
+            Dog Selfie
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.OwnerId)
+            @*@Html.DisplayFor(model => model.ImageUrl)*@
+            <img src="@Model.ImageUrl" alt="Dog Selfie" />
         </dd>
     </dl>
 
