implemented/updated walker profile details page design by refactoring Walkers Details() method and viewto display design

--- a/Views/Owners/Details.cshtml
+++ b/Views/Owners/Details.cshtml
@@ -81,7 +81,7 @@
 </div>
 
 
-@*<div>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+<div>
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Owner.Id }) |
     <a asp-action="Index">Back to List</a>
-</div>*@
+</div>
