--- a/Views/Walkers/Details.cshtml
+++ b/Views/Walkers/Details.cshtml
@@ -1,45 +1,63 @@
-﻿@model DogGo.Models.Walker
+﻿@model DogGo.Models.ViewModels.WalkerProfileViewModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Walker Profile";
 }
 
-<h1>Details</h1>
-
 <div>
-    <h4>Walker</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @*@Html.DisplayNameFor(model => model.Neighborhood.Name)*@
-            Neighborhood
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Neighborhood.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @*@Html.DisplayNameFor(model => model.ImageUrl)*@
-            Avatar
-        </dt>
-        <dd class="col-sm-10">
-            @*@Html.DisplayFor(model => model.ImageUrl)*@
-            <img class="bg-info" src="@Model.ImageUrl" alt="avatar" />
-        </dd>
-    </dl>
+    <h1 class="mb-4">Walker Profile</h1>
+
+    <section class="container">
+        <img style="width:100px;float:left;margin-right:20px"
+             src="@Model.Walker.ImageUrl" alt="avatar" />
+        <div>
+            <label class="font-weight-bold">Name:</label>
+            <span>@Model.Walker.Name</span>
+        </div>
+        <div>
+            <label class="font-weight-bold">Neighborhood:</label>
+            <span>@Model.Walker.Neighborhood.Name</span>
+        </div>
+    </section>
+
+    <hr class="mt-5" />
+    <div class="clearfix"></div>
+
+    <div class="row">
+        <section class="col-8 container mt-5">
+            <h1 class="text-left">Recent Walks</h1>
+
+            <div class="row">
+                @foreach (Walk walk in Model.Walks)
+                {
+                    <div class="card m-4" style="width: 18rem;">
+                        <div class="card-body">
+                            <div>
+                                <label class="font-weight-bold">Date:</label>
+                                <span>@walk.ParsedDateTime</span>
+                            </div>
+                            <div>
+                                <label class="font-weight-bold">Client:</label>
+                                <span>@walk.Walker.Name walked @walk.Dog.Name</span>
+                            </div>
+                            <div>
+                                <label class="font-weight-bold">Duration:</label>
+                                <span>@walk.DurationInMinutes min</span>
+                            </div>
+                        </div>
+                    </div>
+                }
+            </div>
+        </section>
+    </div>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Walker.Id }) |
     <a asp-action="Index">Back to List</a>
 </div>
+
+@*class="col-lg-4 col-md-8 container mt-5
+    class="list-group mt-4"
+    class="list-group-item disabled" aria-disabled="true"
+    <span class="font-weight-bold ml-4"></span>
+    <h1>Walkers Near Me</h1>*@
