working on displaying Total Walk Time in correct format

--- a/Views/Walkers/Details.cshtml
+++ b/Views/Walkers/Details.cshtml
@@ -38,7 +38,13 @@
                             </div>
                             <div>
                                 <label class="font-weight-bold">Client:</label>
-                                <span>@walk.Walker.Name walked @walk.Dog.Name</span>
+                                @*<span>@walk.Walker.Name walked @walk.Dog.Name</span>*@  
+                                @*<span>@walk.Walker.Dog.Name</span>*@
+                            </div>
+                            <div>
+                                <label class="font-weight-bold">Owner:</label>
+                                @*<span>@walk.Walker.Client.Name</span>*@
+                                @*<span>@walk.Owner.Name</span>*@
                             </div>
                             <div>
                                 <label class="font-weight-bold">Duration:</label>
