--- a/Views/Walkers/Details.cshtml
+++ b/Views/Walkers/Details.cshtml
@@ -37,35 +37,24 @@
                                 <span>@walk.ParsedDateTime</span>
                             </div>
                             <div>
-                                <label class="font-weight-bold">Client:</label>
-                                @*<span>@walk.Walker.Name walked @walk.Dog.Name</span>*@  
-                                @*<span>@walk.Walker.Dog.Name</span>*@
+                                <label class="font-weight-bold">Client:</label>                         
+                            <span>@Model.Walker.Name walked @walk.Dog.Name</span>
                             </div>
                             <div>
-                                <label class="font-weight-bold">Owner:</label>
-                                @*<span>@walk.Walker.Client.Name</span>*@
-                                @*<span>@walk.Owner.Name</span>*@
+                                <label class="font-weight-bold">Dog Owner:</label>
+                                <span>@walk.Owner.Name</span>
                             </div>
                             <div>
                                 <label class="font-weight-bold">Duration:</label>
                                 <span>@walk.DurationInMinutes min</span>
+                                @*<span>@(walk.Duration / 60) min</span>*@
                             </div>
                         </div>
                     </div>
                 }
 
                 <h1>Total Walk Time:</h1>
-                <span class="ml-4" style="font-size: 35px">@Model.Walk.TotalDurationTime minutes</span>
-
-                @*<div>
-                    @for (int i = 0; i < Model.Walks.Count; i++)
-                    {
-                        <h1>Total Walk Time:</h1>
-                        <span class="font-weight-bold ml-4">@Model.Walk.TotalDurationTime</span>
-                    }
-                </div>*@
-                @*<div>@Model.Walks.Select(@walk => @walk.TotalDurationTime)</div>*@
-
+                <span class="ml-4" style="font-size: 35px">@Model.TotalDurationTime</span>
             </div>
         </section>
     </div>
