--- a/Views/Dogs/Index.cshtml
+++ b/Views/Dogs/Index.cshtml
@@ -23,7 +23,7 @@
             </th>
             <th>
                 @*@Html.DisplayNameFor(model => model.OwnerId)*@
-                Owner Name
+                @*Owner Name*@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Notes)
@@ -49,7 +49,7 @@
             </td>
             <td>
                 @*@Html.DisplayFor(modelItem => item.OwnerId)*@
-                @Html.DisplayFor(modelItem => item.Owner.Name)
+                @*@Html.DisplayFor(modelItem => item.Owner.Name)*@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Notes)
